[gd_scene load_steps=2 format=3 uid="uid://nedh3ey0mh0p"]

[ext_resource type="Script" path="res://scripts/inventroy.gd" id="1_wyc4w"]

[node name="buff_select" type="Control"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wyc4w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label2" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Select a buff"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="buff1" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
size_flags_vertical = 4

[node name="name" type="Label" parent="VBoxContainer/HBoxContainer/buff1"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 45.0
text = "name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="buff" type="Label" parent="VBoxContainer/HBoxContainer/buff1"]
layout_mode = 0
offset_left = 8.0
offset_top = 80.0
offset_right = 189.0
offset_bottom = 170.0
text = "bla bla bla bla"
autowrap_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/buff1"]
layout_mode = 0
offset_left = 8.0
offset_top = 170.0
offset_right = 189.0
offset_bottom = 235.0
text = "select"

[node name="buff2" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
size_flags_vertical = 4

[node name="name" type="Label" parent="VBoxContainer/HBoxContainer/buff2"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 45.0
text = "name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="buff" type="Label" parent="VBoxContainer/HBoxContainer/buff2"]
layout_mode = 0
offset_left = 8.0
offset_top = 80.0
offset_right = 189.0
offset_bottom = 170.0
text = "bla bla bla bla"
autowrap_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/buff2"]
layout_mode = 0
offset_left = 8.0
offset_top = 170.0
offset_right = 189.0
offset_bottom = 235.0
text = "select"

[node name="buff3" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
size_flags_vertical = 4

[node name="name" type="Label" parent="VBoxContainer/HBoxContainer/buff3"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 45.0
text = "name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="buff" type="Label" parent="VBoxContainer/HBoxContainer/buff3"]
layout_mode = 0
offset_left = 8.0
offset_top = 80.0
offset_right = 189.0
offset_bottom = 170.0
text = "bla bla bla blaasddddddddd"
autowrap_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/buff3"]
layout_mode = 0
offset_left = 8.0
offset_top = 170.0
offset_right = 189.0
offset_bottom = 235.0
text = "select"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "or"
horizontal_alignment = 1
vertical_alignment = 1

[node name="heal_back" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "heal back 25% of max hp"
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/buff1/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/buff2/Button" to="." method="_on_button2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/buff3/Button" to="." method="_on_button3_pressed"]
[connection signal="pressed" from="VBoxContainer/heal_back" to="." method="_on_heal_back_pressed"]
